Restyle - Work in progress.

--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -540,6 +540,11 @@ table {
         height: auto;
     }
 }
+.cp_line_push_user {
+    .mdc-list-item {
+        height: auto;
+    }
+}
 
 .cursor_custom {
     cursor: pointer;
