--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -138,7 +138,7 @@
                 'cpSettingSlackIwCreate': "{{path("cp_setting_slack_iw_create", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpSettingSlackIwDelete': "{{path("cp_setting_slack_iw_delete", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpSettingSlackIwReset': "{{path("cp_setting_slack_iw_reset", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
-                'cpSettingLinePushCreate': "{{path("cp_setting_line_push_create", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpSettingLinePushRender': "{{path("cp_setting_line_push_render", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpSettingLinePushDelete': "{{path("cp_setting_line_push_delete", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpSettingLinePushReset': "{{path("cp_setting_line_push_reset", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpMicroserviceDeployCreate': "{{path("cp_microservice_deploy_create", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
