--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -260,7 +260,7 @@
                 {% if is_granted("ROLE_ADMIN") == true %}
                     <p>{% trans %}controlPanelSettingLine_1{% endtrans %}</p>
 
-                    {{-render(controller("App\\Controller\\ControlPanel\\SettingLinePushController::createAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+                    {{-render(controller("App\\Controller\\ControlPanel\\SettingLinePushController::renderAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     
                     <script type="text/javascript">
                         window.addEventListener("load", function() {
