Restyle - Work in progress.

--- a/symfony_fw/public/css/system/table_and_pagination.css
+++ b/symfony_fw/public/css/system/table_and_pagination.css
@@ -1,4 +1,1 @@
-.tableAndPagination .button_container { display: none; }
-.tableAndPagination .previous, .tableAndPagination .text, .tableAndPagination .next { display: inline-block; vertical-align: middle; }
-
-/*# sourceMappingURL=table_and_pagination.css.map */
+.tableAndPagination .button_container{display:none}.tableAndPagination .update_loading{display:none;vertical-align:middle}.tableAndPagination .update_loading i{font-size:35px}.tableAndPagination .previous,.tableAndPagination .text,.tableAndPagination .next{display:inline-block;vertical-align:middle}/*# sourceMappingURL=table_and_pagination.css.map */
