--- a/symfony_fw/templates/include/table_and_pagination.html.twig
+++ b/symfony_fw/templates/include/table_and_pagination.html.twig
@@ -18,6 +18,9 @@
         </div>
         <div class="mdc-notched-outline__idle"></div>
     </div>
+    <div class="update_loading">
+        <i class="material-icons rotate_loop">autorenew</i>
+    </div>
     <div>
         <div class="previous">
             <button class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>
