--- a/symfony_fw/templates/render/control_panel/page_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_create.html.twig
@@ -44,6 +44,9 @@
         {{form_row(form.onlyParent, {'dense': ""})}}
         {{form_row(form.onlyLink, {'dense': ""})}}
         {{form_row(form.link, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "link"})}}
+        {{form_row(form.metaDescription, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.metaKeywords, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.metaRobots, {'dense': "", 'styleType': "outlinedTrailing"})}}
 
         {{form_widget(form._token)}}
 
