--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -39,6 +39,16 @@
         <link href="{{asset("css/system/wysiwyg.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/chaato.css")}}" rel="stylesheet"/>
         <link href="{{asset("css/system/widget.css")}}" rel="stylesheet"/>
+        
+        {% if app.request.attributes.get("_route") != "control_panel" %}
+            <meta name="description" content="{{pageRow['meta_description']}}"/>
+            <meta name="keywords" content="{{pageRow['meta_keywords']}}"/>
+            <meta name="robots" content="{{pageRow['meta_robots']}}"/>
+        {% else %}
+            <meta name="description" content=""/>
+            <meta name="keywords" content=""/>
+            <meta name="robots" content="noindex, nofollow"/>
+        {% endif %}
     </head>
     <body class="mdc-typography user_select_none">
         <div id="body_progress">
