--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -25,7 +25,7 @@
             <nav class="mdc-drawer__drawer">
                 <header class="mdc-drawer__header">
                     <div class="mdc-drawer__header-content">
-                        <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}"/>
+                        <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
                         <span>{{websiteName}}</span>
                     </div>
                 </header>
@@ -381,11 +381,11 @@
             <span>{% trans %}controlPanel_11{% endtrans %}</span>
         </a>
         <a class="mdc-list-item" href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_setting_slack_iw"})}}">
-            <img class="material-icons" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/slack.png")}}"/>
+            <img class="material-icons" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/slack.png")}}" alt="slack.png"/>
             <span>{% trans %}controlPanel_12{% endtrans %}</span>
         </a>
         <a class="mdc-list-item" href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_setting_line"})}}">
-            <img class="material-icons" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/line.png")}}"/>
+            <img class="material-icons" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/line.png")}}" alt="line.png"/>
             <span>{% trans %}controlPanel_13{% endtrans %}</span>
         </a>
     {% endif %}
