--- a/symfony_fw/templates/render/index.html.twig
+++ b/symfony_fw/templates/render/index.html.twig
@@ -11,11 +11,11 @@
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
                 <a class="material-icons mdc-top-app-bar__navigation-icon menu_root_mobile display_mobile" href="javascript:void(0)">menu</a>
                 <div class="display_desktop">
-                    <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}"/>
+                    <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
                     <span class="mdc-top-app-bar__title">{{websiteName}}</span>
                 </div>
                 <span class="mdc-top-app-bar__title display_mobile">
-                    <img class="logo_main_small" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}"/>
+                    <img class="logo_main_small" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
                 </span>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
@@ -28,7 +28,7 @@
             <nav class="mdc-drawer__drawer">
                 <header class="mdc-drawer__header">
                     <div class="mdc-drawer__header-content">
-                        <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}"/>
+                        <img class="logo_main_big" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}" alt="logo.svg"/>
                         <span>{{websiteName}}</span>
                     </div>
                 </header>
