--- a/symfony_fw/templates/render/index.html.twig
+++ b/symfony_fw/templates/render/index.html.twig
@@ -75,7 +75,7 @@
         {% else %}
             <div class="sortable_column">
                 <div class="maintenance_container">
-                    <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/maintenance.svg")}}">
+                    <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/maintenance.svg")}}" alt="maintenance.svg"/>
                     <p>{% trans %}index_1{% endtrans %}</p>
                     <p>{% trans %}index_2{% endtrans %}</p>
                 </div>
