--- a/symfony_fw/public/css/system/upload.css
+++ b/symfony_fw/public/css/system/upload.css
@@ -1,4 +1,1 @@
-.upload .mdc-linear-progress { display: none; margin: 10px 0; }
-.upload .controls { display: none; }
-
-/*# sourceMappingURL=upload.css.map */
+.upload{margin-bottom:10px}.upload .mdc-linear-progress{display:none;margin:10px 0}.upload .controls{display:none}/*# sourceMappingURL=upload.css.map */
