--- a/symfony_fw/templates/microservice/api/basic/create.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/create.html.twig
@@ -8,7 +8,10 @@
         <form id="form_cp_apiBasic_create" action="{{path("cp_apiBasic_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.token, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            
+            <p class="info_field">{% trans %}apiBasicFormType_3_i{% endtrans %}</p>
             {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            
             {{form_row(form.urlCallback, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.databaseIp, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.databaseName, {'dense': "", 'styleType': "outlinedTrailing"})}}
