--- a/symfony_fw/templates/render/control_panel/microservice_deploy_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_create.html.twig
@@ -1,16 +1,28 @@
 {% form_theme form "@templateRoot/layout/layout_form_materialDesign.html.twig" %}
 
+<a class="mdc-button mdc-button--dense mdc-button--raised" href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_microservice_deploy"})}}">
+    {% trans %}microserviceDeployCreate_1{% endtrans %}
+</a>
+<br><br>
 <fieldset>
-    <legend>{% trans %}microserviceDeployCreate_1{% endtrans %}</legend>
-    <p>{% trans %}microserviceDeployCreate_2{% endtrans %}</p>
+    <legend>{% trans %}microserviceDeployCreate_2{% endtrans %}</legend>
+    <p>{% trans %}microserviceDeployCreate_3{% endtrans %}</p>
     <form id="form_cp_microservice_deploy_create" action="{{path("cp_microservice_deploy_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.description, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.systemUser, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.sshUsername, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.sshPassword, {'dense': "", 'styleType': "outlinedTrailing"})}}
-        {{form_row(form.keyPublic, {'label': "microserviceDeployFormType_6"})}}
-        {{form_row(form.keyPrivate, {'label': "microserviceDeployFormType_7"})}}
+        
+        <div>
+            {{form_row(form.keyPublic, {'label': "microserviceDeployFormType_6"})}}
+            {{form_row(form.removeKeyPublic)}}
+        </div>
+        <div>
+            {{form_row(form.keyPrivate, {'label': "microserviceDeployFormType_8"})}}
+            {{form_row(form.removeKeyPrivate)}}
+        </div>
+        
         {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.gitUserEmail, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.gitUserName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
@@ -19,7 +31,10 @@
         {{form_row(form.userGitScript, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.userWebScript, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.rootWebPath, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-
+        
+        <p class="info_field">{% trans %}microserviceDeployFormType_18_i{% endtrans %}</p>
+        {{form_row(form.command, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        
         {{form_widget(form._token)}}
         
         {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
