--- a/symfony_fw/templates/render/control_panel/microservice_deploy_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_profile.html.twig
@@ -26,10 +26,13 @@
         {{form_row(form.userGitScript, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.userWebScript, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.rootWebPath, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+        
+        <p class="info_field">{% trans %}microserviceDeployFormType_18_i{% endtrans %}</p>
+        {{form_row(form.command, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.active)}}
-
+        
         {{form_widget(form._token)}}
-
+        
         {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
     </form>
     
